Fix alignment of right column.

--- a/app/assets/stylesheets/global.css.sass
+++ b/app/assets/stylesheets/global.css.sass
@@ -161,7 +161,7 @@ li.beardo
     float: right
     width: 225px
     background: #ededed
-    margin: 20px 0
+    margin: 20px 16px 20px 0
     padding: 20px
     border: 1px solid #ccc
     +border-radius(3px)
